--- a/maven-samples/single-module/pom.xml
+++ b/maven-samples/single-module/pom.xml
@@ -18,3 +18,32 @@
         </pluginManagement>
     </build>
 <project>
+<distributionManagement> 
+    <repository>
+        <id>internal.repo</id> 
+        <name>Temporary Staging Repository</name> 
+        <url>file://${project.build.directory}/mvn-artifact</url> 
+    </repository> 
+</distributionManagement>
+    <plugin>
+    <artifactId>maven-deploy-plugin</artifactId>
+    <version>2.8.2</version>
+    <configuration>
+        <altDeploymentRepository>
+            internal.repo::default::file://${project.build.directory}/mvn-artifact
+        </altDeploymentRepository>
+    </configuration>
+</plugin>
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-source-plugin</artifactId>
+    <version>3.1.0</version>
+    <executions>
+        <execution>
+            <id>attach-sources</id>
+                <goals>
+                    <goal>jar</goal>
+                </goals>
+        </execution>
+    </executions>
+</plugin>
